# paralela_fractal

./: CMakeLists.txt  README.md  conandata.yml  fps_counter.cpp  fps_counter.h  main.cpp
